@@ -457,6 +457,7 @@ $(document).ready(function() {
 		</table>
 		<br>
 		<span>Total Usage:</span> <span id="tu">-</span> <span id="munit">m3</span><br>
+		<span>Counter:</span> <span id="cntr">-</span><br>
 		<span>Year Cost:</span> <span id="mc">-</span><br>
 		<br>
 	</div>
@@ -515,10 +516,10 @@ $(document).ready(function() {
 		</table>
 		<br>
 		<span>Total Usage:</span> <span>T1:</span> <span id="tut1">-</span> kWh, <span>T2:</span> <span id="tut2">-</span> kWh, <span>Total:</span> <span id="tu">-</span> kWh<br>
-		<span>Meter Usage:</span> <span>T1:</span> <span id="cntrt1">-</span>, <span>T2:</span> <span id="cntrt2">-</span><br>
+		<span>Counter:</span> <span>T1:</span> <span id="cntrt1">-</span>, <span>T2:</span> <span id="cntrt2">-</span><br>
 		<div id="dreturn" style="display:none;">
 			<span>Total Return:</span> <span>R1:</span> <span id="trt1">-</span> kWh, <span>R2:</span> <span id="trt2">-</span> kWh, <span>Total:</span> <span id="tr">-</span> kWh<br>
-			<span>Meter Return:</span> <span>R1:</span> <span id="cntrr1">-</span>, <span>R2:</span> <span id="cntrr2">-</span><br>
+			<span>Counter Return:</span> <span>R1:</span> <span id="cntrr1">-</span>, <span>R2:</span> <span id="cntrr2">-</span><br>
 		</div>
 		<span>Year Cost:</span> <span id="mc">-</span><br>
 		<br>
