@@ -63,6 +63,7 @@ Version 1.0.xxxx (December xxth 2013)
 - Changed: S0Meter extended for devices with 5 wires
 - Updated: Highcharts 3.0.9, JQuery and JQueryUI
 - Fixed: Transfer dialog did not show correct title in front of destination device
+- Implemented: P1 Smart meter, counter values in report
 
 Version 1.0.1186 (November 16th 2013)
 - Fixed: rain week log, some top legend values did not show on the chart
